# queue-snake

./: CMakeLists.txt  README.md
include/: actor.h  common.h  controller.h  deque.h  messages.h  model.h  queue.h  timer.h  view.h
src/: actor.c  controller.c  deque.c  main.c  model.c  queue.c  timer.c  view.c
